// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentOrGuardianForm should render the component correctly 1`] = `
<div>
  <form
    class="form"
    name="AIR_BOOKING_PARENT_OR_GUARDIAN_FORM"
    novalidate=""
  >
    <fieldset>
      <div
        class="parent-or-guardian-form--container"
      >
        <p
          class="parent-or-guardian-form--info-text"
        >
          You must complete the form entirely including a phone number your parent/guardian contact can be reached in case of emergency. Once you have completed this purchase, any changes to the parent/guardian information must be completed at the airport.
        </p>
        <div
          class="fields pt5 grouped"
        >
          <label
            class="fields--label"
          >
            AIR_BOOKING__PARENT_OR_GUARDIAN_FORM__PARENT_OR_GUARDIAN_LABEL
          </label>
          <div
            class="field"
          >
            <div
              class="input"
            >
              <input
                class=""
                maxlength="30"
                name="firstName"
                placeholder="SHARED__PLACEHOLDER__FIRST_NAME"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="input"
            >
              <input
                class=""
                maxlength="30"
                name="lastName"
                placeholder="SHARED__PLACEHOLDER__LAST_NAME"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="input"
            >
              <input
                class=""
                maxlength="20"
                name="relationship"
                placeholder="SHARED__PLACEHOLDER__RELATIONSHIP"
                value=""
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="fields mt5 grouped"
          >
            <label
              class="fields--label"
            >
              AIR_BOOKING__PARENT_OR_GUARDIAN_FORM__CONTACT_INFORMATION_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="country-code-nav-item-field"
                data-qa="country-code-nav-item-field"
              >
                <a
                  class="nav-item-link input"
                >
                  <div
                    class="country-code-nav-item-field--value"
                    data-qa="country-code-nav-item-field-value"
                  >
                    United States of America
                     - 
                    US
                  </div>
                  <i
                    class="nav-item-link--icon icon icon_keyboard-arrow-right"
                  />
                </a>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  class=""
                  maxlength="40"
                  name="addressLine1"
                  placeholder="Street address"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  class=""
                  maxlength="40"
                  name="addressLine2"
                  placeholder="Street address 2 (optional)"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  name="zipOrPostalCode"
                  placeholder="ZIP code"
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  class=""
                  name="city"
                  placeholder="City"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="province-field_us select-input icon-fixed formatted input large"
              >
                <span
                  class="formatted-input formatted-input--fill"
                >
                  <select
                    class="dropdown empty large"
                    data-qa="select-dropdown"
                    name="stateProvinceRegion"
                    placeholder="State"
                  >
                    <option
                      class="placeholder"
                      data-qa="dqa-enabled-option"
                      value=""
                    >
                      State
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AL"
                    >
                      Alabama
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AK"
                    >
                      Alaska
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AS"
                    >
                      American Samoa
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AZ"
                    >
                      Arizona
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AR"
                    >
                      Arkansas
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AA"
                    >
                      Armed Forces Americas (except Canada)
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AE"
                    >
                      Armed Forces
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AP"
                    >
                      Armed Forces Pacific
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="CA"
                    >
                      California
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="CO"
                    >
                      Colorado
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="CT"
                    >
                      Connecticut
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="DE"
                    >
                      Delaware
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="DC"
                    >
                      District of Columbia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="FM"
                    >
                      Federated States of Micronesia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="FL"
                    >
                      Florida
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="GA"
                    >
                      Georgia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="GU"
                    >
                      Guam
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="HI"
                    >
                      Hawaii
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="ID"
                    >
                      Idaho
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="IL"
                    >
                      Illinois
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="IN"
                    >
                      Indiana
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="IA"
                    >
                      Iowa
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="KS"
                    >
                      Kansas
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="KY"
                    >
                      Kentucky
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="LA"
                    >
                      Louisiana
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="ME"
                    >
                      Maine
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MH"
                    >
                      Marshall Islands
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MD"
                    >
                      Maryland
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MA"
                    >
                      Massachusetts
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MI"
                    >
                      Michigan
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MN"
                    >
                      Minnesota
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MS"
                    >
                      Mississippi
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MO"
                    >
                      Missouri
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MT"
                    >
                      Montana
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NE"
                    >
                      Nebraska
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NV"
                    >
                      Nevada
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NH"
                    >
                      New Hampshire
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NJ"
                    >
                      New Jersey
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NM"
                    >
                      New Mexico
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NY"
                    >
                      New York
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NC"
                    >
                      North Carolina
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="ND"
                    >
                      North Dakota
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MP"
                    >
                      Northern Mariana Islands
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="OH"
                    >
                      Ohio
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="OK"
                    >
                      Oklahoma
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="OR"
                    >
                      Oregon
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="PW"
                    >
                      Palau
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="PA"
                    >
                      Pennsylvania
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="PR"
                    >
                      Puerto Rico
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="RI"
                    >
                      Rhode Island
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="SC"
                    >
                      South Carolina
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="SD"
                    >
                      South Dakota
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="TN"
                    >
                      Tennessee
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="TX"
                    >
                      Texas
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="UT"
                    >
                      Utah
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="VT"
                    >
                      Vermont
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="VI"
                    >
                      Virgin Islands
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="VA"
                    >
                      Virginia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WA"
                    >
                      Washington
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WV"
                    >
                      West Virginia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WI"
                    >
                      Wisconsin
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WY"
                    >
                      Wyoming
                    </option>
                  </select>
                </span>
                <input
                  class=""
                  icon="caret-down"
                  name="stateProvinceRegion"
                  placeholder="State"
                />
                <i
                  class="icon icon_caret-down"
                />
              </div>
            </div>
            <div
              class="field phone-number-field phone-number-field--international"
            >
              <div
                class="labeled input large"
              >
                <div
                  class="input--label mr4"
                >
                  +1
                </div>
                <input
                  label="+1"
                  name="phoneNumber"
                  placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="parent-or-guardian-form--disclaimer-text"
        >
          <span>
            I confirm the accuracy of this contact information and the person is someone other than their purchaser. Southwest Airlines® may contact them.

I acknowledge and confirm the
          </span>
           
          <a
            class="pblue"
            href="#"
          >
            Young Traveler parent consent
          </a>
        </div>
      </div>
      <div
        class="parent-or-guardian-form--continue-button"
      >
        <button
          class="button button--fluid larger button--yellow"
          type="submit"
        >
          AIR_BOOKING__PARENT_OR_GUARDIAN_FORM__CONTINUE
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`ParentOrGuardianForm should render the component correctly when isEditMode is true 1`] = `
<div>
  <form
    class="form"
    name="AIR_BOOKING_PARENT_OR_GUARDIAN_FORM"
    novalidate=""
  >
    <fieldset>
      <div>
        <div
          class="page-header action-bar"
          id=""
        >
          <ul
            class="action-bar-buttons action-bar--left-buttons"
          />
          <div
            class="action-bar--container"
          >
            <div
              class="action-bar--title"
            >
              <span
                class="action-bar--main-title"
              >
                AIR_BOOKING__YOUNG_TRAVELER_EDIT__PAGE_TITLE
              </span>
              <span
                class="action-bar--sub-title"
              />
            </div>
          </div>
          <ul
            class="action-bar-buttons action-bar--right-buttons"
          >
            <li
              class="action-bar-buttons--item"
            >
              <button
                class="button"
                type="submit"
              >
                SHARED__BUTTON_TEXT__DONE
              </button>
            </li>
          </ul>
        </div>
        <div />
      </div>
      <div
        class="parent-or-guardian-form--container"
      >
        <p
          class="parent-or-guardian-form--info-text"
        >
          You must complete the form entirely including a phone number your parent/guardian contact can be reached in case of emergency. Once you have completed this purchase, any changes to the parent/guardian information must be completed at the airport.
        </p>
        <div
          class="fields pt5 grouped"
        >
          <label
            class="fields--label"
          >
            AIR_BOOKING__PARENT_OR_GUARDIAN_FORM__PARENT_OR_GUARDIAN_LABEL
          </label>
          <div
            class="field"
          >
            <div
              class="input"
            >
              <input
                class=""
                maxlength="30"
                name="firstName"
                placeholder="SHARED__PLACEHOLDER__FIRST_NAME"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="input"
            >
              <input
                class=""
                maxlength="30"
                name="lastName"
                placeholder="SHARED__PLACEHOLDER__LAST_NAME"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="input"
            >
              <input
                class=""
                maxlength="20"
                name="relationship"
                placeholder="SHARED__PLACEHOLDER__RELATIONSHIP"
                value=""
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="fields mt5 grouped"
          >
            <label
              class="fields--label"
            >
              AIR_BOOKING__PARENT_OR_GUARDIAN_FORM__CONTACT_INFORMATION_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="country-code-nav-item-field"
                data-qa="country-code-nav-item-field"
              >
                <a
                  class="nav-item-link input"
                >
                  <div
                    class="country-code-nav-item-field--value"
                    data-qa="country-code-nav-item-field-value"
                  >
                    United States of America
                     - 
                    US
                  </div>
                  <i
                    class="nav-item-link--icon icon icon_keyboard-arrow-right"
                  />
                </a>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  class=""
                  maxlength="40"
                  name="addressLine1"
                  placeholder="Street address"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  class=""
                  maxlength="40"
                  name="addressLine2"
                  placeholder="Street address 2 (optional)"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  name="zipOrPostalCode"
                  placeholder="ZIP code"
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input large"
              >
                <input
                  class=""
                  name="city"
                  placeholder="City"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="province-field_us select-input icon-fixed formatted input large"
              >
                <span
                  class="formatted-input formatted-input--fill"
                >
                  <select
                    class="dropdown empty large"
                    data-qa="select-dropdown"
                    name="stateProvinceRegion"
                    placeholder="State"
                  >
                    <option
                      class="placeholder"
                      data-qa="dqa-enabled-option"
                      value=""
                    >
                      State
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AL"
                    >
                      Alabama
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AK"
                    >
                      Alaska
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AS"
                    >
                      American Samoa
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AZ"
                    >
                      Arizona
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AR"
                    >
                      Arkansas
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AA"
                    >
                      Armed Forces Americas (except Canada)
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AE"
                    >
                      Armed Forces
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="AP"
                    >
                      Armed Forces Pacific
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="CA"
                    >
                      California
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="CO"
                    >
                      Colorado
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="CT"
                    >
                      Connecticut
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="DE"
                    >
                      Delaware
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="DC"
                    >
                      District of Columbia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="FM"
                    >
                      Federated States of Micronesia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="FL"
                    >
                      Florida
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="GA"
                    >
                      Georgia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="GU"
                    >
                      Guam
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="HI"
                    >
                      Hawaii
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="ID"
                    >
                      Idaho
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="IL"
                    >
                      Illinois
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="IN"
                    >
                      Indiana
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="IA"
                    >
                      Iowa
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="KS"
                    >
                      Kansas
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="KY"
                    >
                      Kentucky
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="LA"
                    >
                      Louisiana
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="ME"
                    >
                      Maine
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MH"
                    >
                      Marshall Islands
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MD"
                    >
                      Maryland
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MA"
                    >
                      Massachusetts
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MI"
                    >
                      Michigan
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MN"
                    >
                      Minnesota
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MS"
                    >
                      Mississippi
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MO"
                    >
                      Missouri
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MT"
                    >
                      Montana
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NE"
                    >
                      Nebraska
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NV"
                    >
                      Nevada
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NH"
                    >
                      New Hampshire
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NJ"
                    >
                      New Jersey
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NM"
                    >
                      New Mexico
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NY"
                    >
                      New York
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="NC"
                    >
                      North Carolina
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="ND"
                    >
                      North Dakota
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="MP"
                    >
                      Northern Mariana Islands
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="OH"
                    >
                      Ohio
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="OK"
                    >
                      Oklahoma
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="OR"
                    >
                      Oregon
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="PW"
                    >
                      Palau
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="PA"
                    >
                      Pennsylvania
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="PR"
                    >
                      Puerto Rico
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="RI"
                    >
                      Rhode Island
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="SC"
                    >
                      South Carolina
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="SD"
                    >
                      South Dakota
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="TN"
                    >
                      Tennessee
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="TX"
                    >
                      Texas
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="UT"
                    >
                      Utah
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="VT"
                    >
                      Vermont
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="VI"
                    >
                      Virgin Islands
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="VA"
                    >
                      Virginia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WA"
                    >
                      Washington
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WV"
                    >
                      West Virginia
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WI"
                    >
                      Wisconsin
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="WY"
                    >
                      Wyoming
                    </option>
                  </select>
                </span>
                <input
                  class=""
                  icon="caret-down"
                  name="stateProvinceRegion"
                  placeholder="State"
                />
                <i
                  class="icon icon_caret-down"
                />
              </div>
            </div>
            <div
              class="field phone-number-field phone-number-field--international"
            >
              <div
                class="labeled input large"
              >
                <div
                  class="input--label mr4"
                >
                  +1
                </div>
                <input
                  label="+1"
                  name="phoneNumber"
                  placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="parent-or-guardian-form--disclaimer-text"
        >
          <span>
            I confirm the accuracy of this contact information and the person is someone other than their purchaser. Southwest Airlines® may contact them.

I acknowledge and confirm the
          </span>
           
          <a
            class="pblue"
            href="#"
          >
            Young Traveler parent consent
          </a>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;
